--- a/css/result.css
+++ b/css/result.css
@@ -137,7 +137,6 @@ h3 {
 main {
   display: block;
   max-width: 1280px;
-  width: 100%;
   margin-left: 180px;
   z-index: 1;
 }
